<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="10dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />
        <LinearLayout
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_msg"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.SwitchCompat

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:background="#FF909090"
            android:layout_width="match_parent"
            />
        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_version"
            />
        <TextView
            android:textColor="@android:color/black"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/info_version2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_height="1dp"
            android:background="#FF909090"
            android:layout_width="match_parent"
            />

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:text="@string/service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/service1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service2"/>
        <TextView
            android:text="@string/person_info"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_height="1dp"
            android:background="#FF909090"
            android:layout_width="match_parent"
            />

        <ImageView
            android:src="@drawable/logo"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="100dp"
            android:layout_height="50dp" />

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:text="@string/myggum"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="11dp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
</LinearLayout>