<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="@dimen/cardview_default_elevation"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textSize="13sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:textColor="@android:color/background_dark"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"
            android:padding="@dimen/cardview_default_elevation"
            />
        <TextView
            android:textColor="@android:color/background_dark"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>